--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>Cuenta</servlet-name>
         <servlet-class>negocio.Cuenta</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GestionUsuarios</servlet-name>
+        <servlet-class>negocio.GestionUsuarios</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Fondo</servlet-name>
         <url-pattern>/Fondo</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>Cuenta</servlet-name>
         <url-pattern>/Cuenta</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GestionUsuarios</servlet-name>
+        <url-pattern>/GestionUsuarios</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
